# SPDX-License-Identifier: GPL-3.0-or-later
# SPDX-FileCopyrightText: Bradley M. Bell <bradbell@seanet.com>
# SPDX-FileContributor: 2020-23 Bradley M. Bell
# ----------------------------------------------------------------------------

[build-system]
requires      = ['hatchling']
build-backend = 'hatchling.build'

[project]
name    = 'xrst'
version = '2023.1.8'
authors = [
  {name  = 'Bradley M. Bell', email = 'bradbell@seanet.com'},
]
description       = '''
This is a sphinx wrapper that extracts RST file from source code
and then runs sphinx to obtain html, tex, or pdf output files.
It includes automatic processing and commands that make sphinx easier to use.
'''
readme            = 'readme.md'
license           = { file = 'gpl-3.0.txt' }
requires-python   = '>=3.0'
classifiers       = [
'Programming Language :: Python :: 3',
'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
'Operating System :: OS Independent',
]
dependencies  = [
   'build',
   'enchant',
   'furo',
   'pyspellchecker',
   'pytest',
   'sphinx',
   'sphinx-rtd-theme',
   'sphinx-book-theme',
   'toml',
]

[project.scripts]
xrst = 'xrst:run_xrst'

[project.urls]
'Homepage'    = 'https://bradbell.github.io/xrst'
'Bug Tracker' = 'https://github.com/bradbell/xrst/issues'
